--- a/package.json
+++ b/package.json
@@ -14,49 +14,51 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^0.17.1",
-    "@langchain/core": "^0.2.28",
-    "@langchain/google-genai": "^0.0.26",
-    "@langchain/groq": "^0.0.17",
-    "@langchain/ollama": "^0.0.4",
-    "@langchain/openai": "^0.2.7",
-    "@logseq/libs": "^0.0.14",
-    "cheerio": "^1.0.0",
-    "flowbite": "^2.5.1",
-    "flowbite-react": "^0.10.1",
-    "langchain": "^0.2.17",
-    "markdown-to-jsx": "^7.4.7",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/anthropic": "^1.0.0",
+    "@langchain/core": "^1.0.3",
+    "@langchain/google-genai": "^1.0.0",
+    "@langchain/groq": "^1.0.0",
+    "@langchain/mistralai": "^1.0.0",
+    "@langchain/ollama": "^1.0.0",
+    "@langchain/openai": "^1.0.0",
+    "@logseq/libs": "^0.0.17",
+    "cheerio": "^1.1.2",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "langchain": "^1.0.3",
+    "markdown-to-jsx": "^8.0.0",
     "pako": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-query": "^3.39.3",
-    "uuid": "^10.0.0",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/exec": "7.1.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/npm": "10.0.6",
-    "@types/node": "18.19.31",
-    "@types/pako": "^2.0.3",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "@vitejs/plugin-react": "3.1.0",
-    "autoprefixer": "10.4.19",
-    "conventional-changelog-conventionalcommits": "5.0.0",
-    "eslint": "8.57.0",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "postcss": "8.4.38",
-    "semantic-release": "21.1.2",
-    "tailwindcss": "3.4.3",
-    "typescript": "4.9.5",
-    "vite": "4.5.3",
+    "@semantic-release/npm": "13.1.1",
+    "@types/node": "24.10.0",
+    "@types/pako": "^2.0.4",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@types/uuid": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "8.46.3",
+    "@typescript-eslint/parser": "8.46.3",
+    "@vitejs/plugin-react": "5.1.0",
+    "autoprefixer": "10.4.21",
+    "conventional-changelog-conventionalcommits": "9.1.0",
+    "eslint": "9.39.1",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "postcss": "8.5.6",
+    "semantic-release": "25.0.2",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.9.3",
+    "vite": "7.2.2",
     "vite-plugin-logseq": "1.1.2"
   },
   "logseq": {
